--- a/turbo.json
+++ b/turbo.json
@@ -2,23 +2,22 @@
   "$schema": "https://turborepo.com/schema.json",
   "ui": "tui",
   "tasks": {
--   "build": {
-+   "build": {
-+    "cache": false,        // ← 新增：关掉缓存，强制执行注入
-     "dependsOn": ["^build"],
-     "inputs": ["$TURBO_DEFAULT$", ".env*"],
-     "outputs": [".next/**", "!.next/cache/**"],
-     "env": ["VITE_FINNHUB_KEY"]
-   },
-   "lint": {
-     "dependsOn": ["^lint"]
-   },
-   "check-types": {
-     "dependsOn": ["^check-types"]
-   },
-   "dev": {
-     "cache": false,
-     "persistent": true
-   }
- }
+    "build": {
+      "cache": false,
+      "dependsOn": ["^build"],
+      "inputs": ["$TURBO_DEFAULT$", ".env*"],
+      "outputs": [".next/**", "!.next/cache/**"],
+      "env": ["VITE_FINNHUB_KEY"]
+    },
+    "lint": {
+      "dependsOn": ["^lint"]
+    },
+    "check-types": {
+      "dependsOn": ["^check-types"]
+    },
+    "dev": {
+      "cache": false,
+      "persistent": true
+    }
+  }
 }
