--- a/turbo.json
+++ b/turbo.json
@@ -3,11 +3,9 @@
   "ui": "tui",
   "tasks": {
     "build": {
-      "cache": false,
       "dependsOn": ["^build"],
       "inputs": ["$TURBO_DEFAULT$", ".env*"],
-      "outputs": [".next/**", "!.next/cache/**"],
-      "env": ["VITE_FINNHUB_KEY"]
+      "outputs": [".next/**", "!.next/cache/**"]
     },
     "lint": {
       "dependsOn": ["^lint"]
