--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,4 @@ VITE_ALPHA_VANTAGE_KEY=YOUR_ALPHA_VANTAGE_KEY_HERE
 # For Next.js exposure to browser use NEXT_PUBLIC_ prefix
 NEXT_PUBLIC_FINNHUB_TOKEN=${VITE_FINNHUB_KEY}
 NEXT_PUBLIC_ALPHA_VANTAGE_TOKEN=${VITE_ALPHA_VANTAGE_KEY}
+TZ=America/New_York
