--- a/.env.local
+++ b/.env.local
@@ -3,3 +3,4 @@ VITE_SUPABASE_ANON_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFz
 NEXT_PUBLIC_FINNHUB_TOKEN=d19cvm9r01qmm7tudrk0d19cvm9r01qmm7tudrkg
 NEXT_PUBLIC_ALPHA_VANTAGE_TOKEN=7WVA9HZ4BCR6BR30
 NEXT_PUBLIC_FINNHUB_TOKEN=d19cvm9r01qmm7tudrk0d19cvm9r01qmm7tudrkg
+TZ=America/New_York
