feat(web): add quote api route

--- a/env.example
+++ b/env.example
@@ -1,6 +1,8 @@
 # API Keys for stock data providers
 NEXT_PUBLIC_FINNHUB_TOKEN=your_finnhub_api_key_here
 NEXT_PUBLIC_ALPHA_VANTAGE_TOKEN=your_alphavantage_api_key_here
+# Server-side Finnhub API key. Define only on the server and never expose to the browser
+FINNHUB_API_KEY=
 
 # Optional: Analytics (if used)
 NEXT_PUBLIC_ANALYTICS_ID=
