Add Tiingo token placeholders

--- a/env.example
+++ b/env.example
@@ -1,6 +1,7 @@
 # API Keys for stock data providers
 NEXT_PUBLIC_FINNHUB_TOKEN=your_finnhub_api_key_here
 NEXT_PUBLIC_ALPHA_VANTAGE_TOKEN=your_alphavantage_api_key_here
+NEXT_PUBLIC_TIINGO_TOKEN=your_tiingo_api_key_here
 # Server-side Finnhub API key. Define only on the server and never expose to the browser
 FINNHUB_API_KEY=
 
