chore: consolidate env example

--- a/env.example
+++ b/env.example
@@ -1,6 +1,9 @@
 # API Keys for stock data providers
-NEXT_PUBLIC_FINNHUB_TOKEN=your_finnhub_api_key_here
-NEXT_PUBLIC_ALPHA_VANTAGE_TOKEN=your_alphavantage_api_key_here
+VITE_FINNHUB_KEY=your_finnhub_api_key_here
+VITE_ALPHA_VANTAGE_KEY=your_alphavantage_api_key_here
+# For Next.js exposure to browser use NEXT_PUBLIC_ prefix
+NEXT_PUBLIC_FINNHUB_TOKEN=${VITE_FINNHUB_KEY}
+NEXT_PUBLIC_ALPHA_VANTAGE_TOKEN=${VITE_ALPHA_VANTAGE_KEY}
 NEXT_PUBLIC_TIINGO_TOKEN=your_tiingo_api_key_here
 # Server-side Finnhub API key. Define only on the server and never expose to the browser
 FINNHUB_API_KEY=
@@ -14,4 +17,4 @@ VERCEL_ENV=production
 
 # Application settings
 NEXT_PUBLIC_APP_URL=https://your-domain.com
-NODE_ENV=production 
+NODE_ENV=production
