feat: support price freeze date

--- a/env.example
+++ b/env.example
@@ -16,5 +16,7 @@ VERCEL_URL=
 VERCEL_ENV=production
 
 # Application settings
+# Optional: freeze all price lookups to a specific trading day (YYYY-MM-DD)
+NEXT_PUBLIC_FREEZE_DATE=
 NEXT_PUBLIC_APP_URL=https://your-domain.com
 NODE_ENV=production
