test: enforce dailyResult schema

--- a/.github/workflows/guard.yml
+++ b/.github/workflows/guard.yml
@@ -11,4 +11,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - run: echo "CI running (no [skip ci] found)"
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: npm
+      - run: npm ci
+      - run: npm test
