chore: install turbo as dependency

--- a/.github/workflows/guard.yml
+++ b/.github/workflows/guard.yml
@@ -16,4 +16,5 @@ jobs:
           node-version: 20
           cache: npm
       - run: npm ci
+        # turbo is installed as a dependency to avoid interactive prompts
       - run: npm test
