--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "jest": "^30.0.5",
     "prettier": "^3.6.2",
     "ts-jest": "^29.4.0",
-    "turbo": "^2.5.4",
     "typescript": "5.8.3"
   },
   "engines": {
@@ -27,6 +26,7 @@
     "packages/*"
   ],
   "dependencies": {
-    "date-fns-tz": "^3.2.0"
+    "date-fns-tz": "^3.2.0",
+    "turbo": "^2.5.4"
   }
 }
