--- a/package.json
+++ b/package.json
@@ -7,14 +7,14 @@
     "lint": "npx --yes turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "check-types": "npx --yes turbo run check-types",
-    "test": "npx --yes jest"
+    "test": "jest"
   },
   "devDependencies": {
-    "@types/jest": "^30.0.0",
+    "@types/jest": "^29.5.12",
     "fake-indexeddb": "^6.0.1",
-    "jest": "^30.0.5",
+    "jest": "^29.7.0",
     "prettier": "^3.6.2",
-    "ts-jest": "^29.4.0",
+    "ts-jest": "^29.1.1",
     "typescript": "5.8.3"
   },
   "engines": {
