--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -19,6 +19,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
+    "decimal.js-light": "^2.5.1",
     "idb": "^8.0.3",
     "next": "^15.3.0",
     "react": "^19.1.0",
