--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@types/jest": "^30.0.0",
     "fake-indexeddb": "^6.0.1",
+    "fast-check": "^4.3.0",
     "jest": "^30.0.5",
     "prettier": "^3.6.2",
     "ts-jest": "^29.4.0",
