feat: add monitoring alerts for metrics

--- a/env.example
+++ b/env.example
@@ -19,4 +19,6 @@ VERCEL_ENV=production
 # Optional: freeze all price lookups to a specific trading day (YYYY-MM-DD)
 NEXT_PUBLIC_FREEZE_DATE=
 NEXT_PUBLIC_APP_URL=https://your-domain.com
+# Optional: endpoint to receive monitoring alerts
+NEXT_PUBLIC_MONITOR_URL=
 NODE_ENV=production
