--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,7 +9,9 @@
     "start": "next start",
     "lint": "next lint --max-warnings 0",
     "check-types": "tsc --noEmit",
-    "typecheck": "tsc -p tsconfig.json --noEmit"
+    "typecheck": "tsc -p tsconfig.json --noEmit",
+    "replay": "tsx scripts/replay.ts",
+    "check:monitor": "MONITOR=1 npm run replay"
   },
   "dependencies": {
     "@radix-ui/react-tabs": "^1.1.12",
