test: add M5 breakdown golden trace

--- a/turbo.json
+++ b/turbo.json
@@ -1,18 +1,40 @@
 {
   "$schema": "https://turborepo.com/schema.json",
   "ui": "tui",
-  "globalEnv": ["FINNHUB_API_KEY", "NODE_ENV", "TZ"],
+  "globalEnv": [
+    "FINNHUB_API_KEY",
+    "NODE_ENV",
+    "TZ",
+    "CI",
+    "MONITOR",
+    "LOG_LEVEL",
+    "FREEZE_DATE",
+    "TIINGO_API_KEY"
+  ],
   "tasks": {
     "build": {
-      "dependsOn": ["^build"],
-      "inputs": ["$TURBO_DEFAULT$", ".env*"],
-      "outputs": [".next/**", "!.next/cache/**", "dist/**"]
+      "dependsOn": [
+        "^build"
+      ],
+      "inputs": [
+        "$TURBO_DEFAULT$",
+        ".env*"
+      ],
+      "outputs": [
+        ".next/**",
+        "!.next/cache/**",
+        "dist/**"
+      ]
     },
     "lint": {
-      "dependsOn": ["^lint"]
+      "dependsOn": [
+        "^lint"
+      ]
     },
     "check-types": {
-      "dependsOn": ["^check-types"]
+      "dependsOn": [
+        "^check-types"
+      ]
     },
     "dev": {
       "cache": false,
