chore: align jest aliases for guard

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "verify:history": "tsx --tsconfig apps/web/tsconfig.json apps/web/scripts/verify-history.ts",
     "ci:pr": "npm run verify:golden && turbo run build --filter=!web --output-logs=errors-only",
     "check:types": "tsc -p apps/web/tsconfig.json --noEmit",
-    "ci": "npm run check:types -w web && npm run test -w web && npm run build -w web"
+    "ci": "npm run check:types -w web && npm run test -w web && npm run build -w web",
+    "guard": "npm run ci"
   },
   "devDependencies": {
     "@types/jest": "^30.0.0",
