feat(web): normalize golden verification

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -16,7 +16,8 @@
     "test": "jest",
     "check:types": "tsc --noEmit",
     "backtest:smoke": "node ./scripts/replay.js --from=2025-08-01 --to=2025-08-01 || node ./scripts/replay.ts --from=2025-08-01 --to=2025-08-01",
-    "verify:real": "tsx ./scripts/verify-real.ts"
+    "verify:real": "tsx ./scripts/verify-real.ts",
+    "verify:golden": "tsx ./scripts/verify-golden.ts"
   },
   "dependencies": {
     "@radix-ui/react-tabs": "^1.1.12",
