--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -35,7 +35,8 @@
     "react-dom": "^19.1.0",
     "recharts": "^3.1.0",
     "tailwind-merge": "^3.3.1",
-    "zustand": "^5.0.6"
+    "zustand": "^5.0.6",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@repo/eslint-config": "*",
